# f1fantasy

./: .gitignore  README.md  pyproject.toml
data/: load_points_acc_aus_2023.csv  load_points_acc_template.csv
data/db/: backup-model.ttl  backup.ttl  f1fantasy-model.ttl
f1fantasy/: cli.py
f1fantasy/adapter/: discord.py
f1fantasy/cli/: fantasy.py  gp.py  helpers.py  team.py
f1fantasy/command/: __init__.py  commanda.py  fantasy_command.py  fantasy_df_builder.py  graph_command.py  helpers.py  season_command.py  team_command.py
f1fantasy/dataframe/: __init__.py  dataframe.py  expr.py  fantasy.py
f1fantasy/domain/: __init__.py  fantasy.py  helpers.py  season.py  teams.py
f1fantasy/f1_seasons/: competition.py  fantasy_scoring.py  grand_prix.py  season.py  years.py
f1fantasy/fantasy/: grand_prix.py  teams.py
f1fantasy/graph/: rdf_prefix.py  sparql.py
f1fantasy/initialiser/: __init__.py  db.py
f1fantasy/model/: __init__.py  fantasy.py  gp.py  member.py  value.py
f1fantasy/plot/: __init__.py  fantasy_plot.py
f1fantasy/presenter/: __init__.py  fantasy_presenters.py  plot_channel_sender.py  teams_presenters.py
f1fantasy/query/: __init__.py  fantasy.py  helpers.py  seasons.py
f1fantasy/rdf/: __init__.py  sparql.py
f1fantasy/repo/: __init__.py  f1fantasy-model.ttl  gn.py  gp_seasons.py  triples.py
f1fantasy/util/: error.py
sh/: load.sh  load_gp.sh  load_points_acc_sau_2023.sh  load_points_bah_2023.sh  load_points_sau_2023.sh  load_points_xxx_2023.sh  load_scores.sh  load_season_2023.sh  load_seasons.sh  load_teams.sh
tests/fixtures/: load_points_acc_bah_2023.csv  load_points_acc_sau_2023.csv
tests/shared/: f1.http  graph.py
tests/test_competition/: test_competition.py
tests/test_dataframe/: test_fantasy.py  test_fantasy_df.py
tests/test_fantasy/: test_teams.py
tests/test_gp/: test_fantasy_points.py  (+1 more)
(+26 files in other folders)
