[tool.poetry]
name = "f1fantasy"
version = "0.1.0"
description = ""
authors = ["Col Perks <wild.fauve@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
gp = "f1fantasy.cli.gp:cli"
team = "f1fantasy.cli.team:cli"
fantasy = "f1fantasy.cli.fantasy:cli"


[tool.poetry.dependencies]
python = "^3.9"
rdflib = "^6.2.0"
pendulum = "^2.1.2"
PyMonad = "^2.4.0"
click = "^8.1.3"
rich = "^13.3.1"
polars = "^0.16.7"
pyarrow = "^11.0.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pytest-env = "^0.8.1"
pytest = "^7.2.1"
pdbpp = "^0.10.3"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = [
    "*Test",
    "Test*",
    "Describe*",
]
python_functions = [
    "test_*",
    "it_*",
]
xfail_strict = true
log_cli = true
log_cli_level = 20
env = [
]
testpaths = [
    "tests",
    "integration",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
